# matmattiemchudu-backup-2

./: .gitignore  app.py  auto_push.sh  cache.py  config.py  fix_push.sh  fresh_push.sh  models.py  pyproject.toml  replit.md  startup.py  sw.js
blueprints/: booking.py  customer.py  tracking.py
client/: index.html
services/: cache_service.py  google_sheets_service.py  shipping_service.py
static/: manifest.json
static/css/: style.css
static/js/: coupon-system.js  cursor.js  interactive-background.js  main.js  performance-optimizer.js  tracking.js
templates/: 404.html  base.html  welcome.html
templates/admin/: debug.html
templates/booking/: event.html  event_form.html  index.html  order.html
templates/customer/: embed.html  embed_code.html  index.html
templates/tracking/: index.html  results.html  sheets_results.html
utils/: __init__.py  decorators.py  helpers.py
